--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
     "connected-react-router": "^6.4.0",
+    "cors": "^2.8.5",
     "css-loader": "^3.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -31,10 +32,11 @@
   },
   "scripts": {
     "start-dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start-prod": "set NODE_ENV=production && node ./src/server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node ./src/server/server.js",
+    "server": "nodemon ./src/server/server.js",
     "client": "react-scripts start",
     "azure-build": "npm install && npm run build",
     "start": "npm run server"
