--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start-dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start-prod": "set NODE_ENV=production && node ./src/server/server.js",
+    "start-prod": "export NODE_ENV=production && node ./src/server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
