--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.5.0",
     "mongoose": "^5.6.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -61,7 +62,8 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-router": "^5.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
